# todolist_hexagon

./: .gitignore  README.md  mypy.ini  pyproject.toml
src/: commands.py  dependencies.py  events.py  ports.py  todolist_aggregate.py  todolist_usecase.py  use_case_dependencies.py
src/hexagon/fvp/: aggregate.py
src/hexagon/shared/: event.py  type.py
src/hexagon/todolist/: aggregate.py  port.py  todolist_repository.py
src/hexagon/user/: create_todolist.py  port.py
src/shared/: const.py  filter.py
src/todolist_hexagon/: __init__.py  builder.py  commands.py  events.py  ports.py  query_dependencies.py  read_adapter_dependencies.py  result.py  task_aggregate.py  task_error.py  todolist_aggregate.py  todolist_usecase.py  use_case_dependencies.py  write_adapter_dependencies.py
src/todolist_hexagon/adapter_contract_testing/: base_test_event_store.py
src/todolist_hexagon/base/: events.py  ports.py
src/todolist_hexagon/fvp/: aggregate.py
src/todolist_hexagon/secondary/: event_store_in_memory.py
src/todolist_hexagon/todolist/: aggregate.py  port.py  (+1 more)
tests/: fixture.py  test_failing_sample.py  test_result.py  test_todolist.py
tests/secondary/: test_event_store_in_memory.py
tests/test_todolist/: conftest.py  datetime_provider_fixed.py  event_store_for_test.py  fixture.py  test_when_close_task.py  test_when_create_todolist.py  test_when_describe_task.py  test_when_open_sub_task.py  test_when_open_task.py
tests/todolist_hexagon/: adapter_dependencies_for_test.py  read_adapter_dependencies_for_test.py  write_adapter_dependencies_for_test.py
(+58 files in other folders)
