[project]
name = "todolist-hexagon"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan LAURENT",email = "johjo@ytreza.org"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "faker (>=37.1.0,<38.0.0)",
    "expression (>=5.6.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "todolist_hexagon", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
